@@ -51,7 +51,7 @@ public class ChatSmith {
         if (args.length > 0) {
             port = Integer.parseInt(args[0]);
         }
-        ExecutorService executor = Executors.newFixedThreadPool(10);
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
         try {
             HttpServer server = createHttpServer(port);
             server.createContext("/v1/chat/completions", new CompletionHandler());
